--- a/normy.html
+++ b/normy.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sportowe Lato</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="icon" href="logo.png">
@@ -28,7 +28,7 @@
             <a href="#4">KONTAKT</a>
         </li>
         <li>
-            <a href="normy.html"><img class="kontrastbutton" src="kontrastzmiana.png"></a>
+            <a href="index.html">ZMIANA KONTRASTU</a>
         </li>
     </ul>
     <div class="burger">
