--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#4">KONTAKT</a>
         </li>
         <li>
-            <a href="normy.html"><img class="kontrastbutton" src="kontrastzmiana.png"></a>
+            <a href="normy.html"><img class="kontrastbutton" src="kontrastzmiana.png" width="80px" height="30px"></a>
         </li>
     </ul>
     <div class="burger">
@@ -232,9 +232,9 @@
                     <h1 class="about-logo">Kategorie</h1>
                 <ul class="linki">
                 <a href="index.html"><li>Strona Główna</li></a>
-                <a href="oferta.html"><li>Oferta</li></a>
-                <a href="organizacja.html"><li>Organizacja</li></a>
-                <a href="kontakt.html"><li>Kontakt</li></a>
+                <a href="#3"><li>Oferta</li></a>
+                <a href="#2"><li>Organizacja</li></a>
+                <a href="#4"><li>Kontakt</li></a>
                 </ul>
         </div>
             <div class="footer-section contact-form">
