--- a/normy.html
+++ b/normy.html
@@ -16,7 +16,7 @@
    
     <ul class="nav-links">
         <li>
-            <a href="index.html">START</a>
+            <a href="normy.html">START</a>
         </li>
         <li>
             <a href="#3">OFERTA</a>
@@ -231,10 +231,10 @@
         <div class="footer-section links">
                     <h1 class="about-logo">Kategorie</h1>
                 <ul class="linki">
-                <a href="index.html"><li>Strona Główna</li></a>
-                <a href="oferta.html"><li>Oferta</li></a>
-                <a href="organizacja.html"><li>Organizacja</li></a>
-                <a href="kontakt.html"><li>Kontakt</li></a>
+                    <a href="index.html"><li>Strona Główna</li></a>
+                    <a href="#3"><li>Oferta</li></a>
+                    <a href="#2"><li>Organizacja</li></a>
+                    <a href="#4"><li>Kontakt</li></a>
                 </ul>
         </div>
             <div class="footer-section contact-form">
