--- a/normy.html
+++ b/normy.html
@@ -28,7 +28,7 @@
             <a href="#4">KONTAKT</a>
         </li>
         <li>
-            <a href="index.html">ZMIANA KONTRASTU</a>
+            <div class="nomra"><a href="index.html">ZMIANA <br>KONTRASTU</a></div>
         </li>
     </ul>
     <div class="burger">
