--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#4">KONTAKT</a>
         </li>
         <li>
-            <a href="normy.html"><img class="kontrastbutton" src="kontrastzmiana.png" width="80px" height="30px"></a>
+            <div class="nomra"><a href="normy.html">ZMIANA <br>KONTRASTU</a></div>
         </li>
     </ul>
     <div class="burger">
